[package]
name = "text_placeholder"
description = "A flexible text template engine"
version = "0.2.0"
authors = ["Bernardo Araujo <bernardo.amc@gmail.com>"]
edition = "2018"
repository = "https://github.com/bernardoamc/text-placeholder"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
# Optional dependency in order to use structs for context instead of a HashMap.
struct_context = ["serde", "serde_json"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
