[package]
name = "text_placeholder"
description = "A flexible text template engine"
version = "0.5.1"
authors = ["Bernardo Araujo <bernardo.amc@gmail.com>"]
edition = "2018"
repository = "https://github.com/bernardoamc/text-placeholder"
license = "MIT"
readme = "README.md"

[features]
default = ["std"]
std = []
# Optional dependency in order to use structs for context instead of a HashMap.
struct_context = ["std", "serde", "serde_json"]

[dependencies]
hashbrown = { version = "0.13.2"} # Used when std feature is not enabled
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
